# labelmerge-standalone

./: README.md  pyproject.toml
labelmergestandalone/: labelsplit.py
