[tool.poetry]
name = "labelmergestandalone"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "labelmergestandalone"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.5"
pandas = "^1.5.1"
xarray = "^2022.11.0"
nibabel = "^4.0.2"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pylint = "^2.15.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
